# duatic_ros2control

./: .pre-commit-config.yaml  LICENSE  README.md  repos.list
duatic_controller_msgs/: CMakeLists.txt  package.xml
duatic_controller_msgs/msg/: DriveState.msg  DriveStateCollection.msg  MultiPoseTarget.msg  PoseTarget.msg
duatic_controllers/: CMakeLists.txt  controller_interface_plugin.xml  package.xml
duatic_controllers/include/duatic_controllers/: brake_release_controller.hpp  cartesian_pose_controller.hpp  duadrive_pid_tuner.hpp  duadrive_status_broadcaster.hpp  exceptions.hpp  force_torque_broadcaster.hpp  freedrive_controller.hpp  freeze_controller.hpp  gravity_compensation_controller.hpp  interface_utils.hpp  ros2_control_compat.hpp  safety_scaling_controller.hpp
duatic_controllers/src/: brake_release_controller.cpp  brake_release_controller_parameters.yaml  cartesian_pose_controller.cpp  cartesian_pose_controller_parameters.yaml  duadrive_pid_tuner.cpp  duadrive_pid_tuner_parameters.yaml  duadrive_status_broadcaster.cpp  duadrive_status_broadcaster_parameters.yaml  force_torque_broadcaster.cpp  force_torque_broadcaster_parameters.yaml  freedrive_controller.cpp  freedrive_controller_parameters.yaml  freeze_controller.cpp  gravity_compensation_controller.cpp  safety_scaling_controller.cpp  safety_scaling_controller_parameters.yaml
duatic_duadrive_interface/: CMakeLists.txt  package.xml
duatic_duadrive_interface/include/duatic_duadrive_interface/: coupled_kinematics_hardware_interface.hpp  coupled_kinematics_invariant_mapping.hpp  coupled_kinematics_invariant_translator.hpp  coupled_kinematics_position_limiter.hpp  coupled_kinematics_translation_traits.hpp  coupled_kinematics_translator.hpp  coupled_kinematics_types.hpp  duadrive_interface.hpp  duadrive_interface_base.hpp  duadrive_interface_mock.hpp  duadrive_utils.hpp  interface_utils.hpp  visibility_control.h
duatic_duadrive_interface/include/duatic_ros2control_hardware/: duadrive_interface_mock.hpp  duadrive_utils.hpp
duatic_duadrive_interface/src/: coupled_kinematics_hardware_interface.cpp  coupled_kinematics_invariant_translator.cpp  duadrive_interface.cpp  duadrive_interface_base.cpp  duadrive_interface_mock.cpp
duatic_duadrive_interface/test/: test_coupled_kinematics_position_limiter.cpp
duatic_duadrive_interface/urdf/: duadrive_interface.urdf.xacro
duatic_duadrive_scanner/: CMakeLists.txt  package.xml
duatic_duadrive_scanner/include/duatic_duadrive_scanner/: Scanner.hpp  ethercat_context.hpp  ethercat_utils.hpp  firmware_info.hpp
duatic_duadrive_scanner/src/: Scanner.cpp  duadrive_scanner.cpp
duatic_ros2control_hardware/: CMakeLists.txt  package.xml
duatic_ros2control_hardware/include/duatic_ros2control_hardware/: duadrive_interface.hpp  duadrive_interface_base.hpp  duadrive_interface_mock.hpp  duadrive_ros2control_hardware.hpp  duadrive_utils.hpp  interface_utils.hpp  visibility_control.h
duatic_ros2control_hardware/src/: duadrive_interface.cpp  duadrive_interface_base.cpp  duadrive_interface_mock.cpp  duadrive_ros2control_hardware.cpp
