<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>duatic_duadrive_interface</name>
  <version>0.0.0</version>
  <description>Collection of classes and utils which makes using a Duatic DuaDrive easy with ros2control</description>
  <maintainer email="lnachtigall@duatic.com">Lennart Nachtigall</maintainer>
  <license>BSD3-Clause</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>

  <depend>hardware_interface</depend>
  <depend>rsl_drive_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
